[package]
name = "geonetrs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/michelm/geonetrs"
description = "Provides GEO networking layer logic as defined in ETSI EN 302 636-4-1 V1.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
